--- a/browserAction/popup.css
+++ b/browserAction/popup.css
@@ -1,28 +1,27 @@
 body {
   min-width: 300px;
+  font-size: 12pt;
+  color: #1c6677;
 }
 
 h1 {
   margin: 0.25em 0;
 }
 
-div {
-  font-size: 12pt;
-  margin: 3px;
-}
-
 a,
-div,
-a:visited {
+label,
+a:visited,
+#defaultMenu > div {
   cursor: pointer;
   color: #1c6677;
   text-decoration: none;
 }
 
 a:hover,
-div > div:hover {
+#defaultMenu > div:hover {
   color: #20b8da;
 }
+
 a,
 a:hover,
 a:active,
@@ -30,14 +29,18 @@ a:focus {
   outline: 0;
 }
 
-#mainWrapper {
-  margin: 1em;
-}
-
 #prefWrapper {
-  background: #CEDDE6;
+  background: #cedde6;
   text-align: right;
   padding: 2px 10px 2px 0;
+}
+
+#laptopButton {
+  margin: 1em 1em 0 1em;
+}
+
+.mainWrapper {
+  margin: 0 1em 1em 1em;
 }
 
 /* The switch - the box around the slider */
