--- a/optionsPage/options.css
+++ b/optionsPage/options.css
@@ -101,3 +101,32 @@ legend {
   border-radius: 5px;
   padding: 3px;
 }
+
+/* Custom Picklist Sort */
+#customPicklist button {
+  cursor: pointer;
+}
+
+.picklistSettingStatus {
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+
+.notSet,
+.error {
+  color: #d25d28;
+}
+
+.set {
+  display: none;
+  color: #70a43f;
+}
+
+.success {
+  color: #70a43f;
+}
+
+#updateLocColSortStatus,
+#updatePBJFISortStatus {
+  margin-left: 1em;
+}
